# lcd_ili9341_with_lv_freetype

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  partitions.csv  sdkconfig
components/freetype/: CMakeLists.txt  README.md
components/freetype/lib/freetype/: CMakeLists.txt
components/freetype/lib/freetype/builds/vms/: ftsystem.c
components/freetype/lib/freetype/devel/: ftoption.h
components/freetype/lib/freetype/docs/reference/: 404.html  ft2-auto_hinter.html  ft2-base_interface.html  ft2-basic_types.html  ft2-bdf_fonts.html  ft2-bitmap_handling.html  ft2-bzip2.html  ft2-cache_subsystem.html  ft2-cff_driver.html  ft2-cid_fonts.html  ft2-color_management.html  ft2-computations.html  ft2-error_code_values.html  ft2-error_enumerations.html  ft2-font_formats.html  ft2-gasp_table.html  ft2-glyph_management.html  ft2-glyph_stroker.html  ft2-glyph_variants.html  ft2-gx_validation.html  ft2-gzip.html  ft2-header_file_macros.html  ft2-header_inclusion.html  ft2-incremental.html  ft2-index.html  ft2-layer_management.html  ft2-lcd_rendering.html  ft2-list_processing.html  ft2-lzw.html  ft2-mac_specific.html  ft2-module_management.html  ft2-multiple_masters.html  ft2-ot_validation.html  ft2-outline_processing.html  ft2-parameter_tags.html  ft2-pcf_driver.html  ft2-pfr_fonts.html  ft2-properties.html  ft2-quick_advance.html  ft2-raster.html  (+12 more)
components/lv_lib_freetype/: CMakeLists.txt
main/: CMakeLists.txt  LvGlApp.cpp  LvGlApp.h  ScreenBase.h  main.cpp
main/demo/: DemoScreen.cpp  DemoScreen.h
